# mcsmp-web

./: .env  .gitignore  Jenkinsfile  LICENSE.txt  README.md  composer.json  package.json  pnpm-lock.yaml  start-dev.sh  tsconfig.json  webpack.config.js
config/: bundles.php  services.yaml
deno-socket/: client.ts  server.ts
frontend/src/css/: app.scss
frontend/src/ts/: Login.vue  app.ts  config.ts
frontend/src/ts/components/: ConnectorList.vue  Dashboard.vue  ServerList.vue
frontend/src/ts/components/notifications/: AlertHolder.vue  NotificationHolder.vue
frontend/src/ts/components/servers/: CreateServerModal.vue  ServerEditInfo.vue  ServerEditor.vue  ServerEditorList.vue  VersionPicker.vue
frontend/src/ts/components/users/: UserSettings.vue  UserSettingsGeneral.vue
frontend/src/ts/models/: alert.ts  notification.ts
frontend/src/ts/routes/: router.ts
frontend/src/ts/store/: LoginStore.ts
realtime-socket/: Cargo.toml
realtime-socket/src/: cli.rs  main.rs
src/Controller/: ConnectorController.php  HomeController.php  ServerController.php  TestController.php  UserController.php
src/Entity/: Connector.php  User.php  UserAPIKey.php
src/Migrations/: Version20200509194957.php  Version20200509201146.php  Version20200509210127.php  Version20200520233109.php
src/Repository/: ConnectorRepository.php  UserAPIKeyRepository.php
src/Security/: ApiLoginAuthenticator.php  TokenAuthenticator.php
src/Util/: ConnectorInterface.php
templates/: index.html.twig
templates/connector/: index.html.twig
templates/user/: index.html.twig
(+2 files in other folders)
