[package]
name = "realtime-socket"
version = "0.1.0"
authors = ["System.rat <system.rodent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = { version = "^1.2.2", features = ["native-tls"] }
structopt = "^0.3"
tokio-tungstenite = "^0.11"
tokio = { version = "^0.2.22", features = ["full"] }
futures = "^0.3"
tokio-amqp = "^0.1.3"
redis = { version = "^0.17", features = ["tokio-rt-core"]}
